# Pig-Pointer

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  build.ps1  pig_pointer.py  pyproject.toml  requirements.txt  run.ps1  start_pig_pointer.bat
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: build-windows.yml
pig_pointer/: __init__.py  __main__.py  app.py  constants.py  renderers.py  tray.py  utils.py  win32.py
